# human_collision_objects

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: human_config.yaml
data/: .~lock.task_1_t_means.csv#  task_1_t_means.csv  task_2_t_means.csv  task_3_t_means.csv  task_4_t_means.csv  task_5_t_means.csv  task_6_t_means.csv  task_7_t_means.csv
include/fake_human/: utilities.h
include/human_collision_objects/: utilities.h
launch/: fake_human.launch  live_human.launch  play_bag.launch  safety.launch  sharework_tracking.launch
src/: fake_human.cpp  live_human.cpp  play_bag.py  sharework_tracking.py
src/fake_human/: utilities.cpp
src/human_collision_objects/: filter_functions.py  quat_functions.py  utilities.cpp
